Fixing some German StatusLine translations

--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -1100,37 +1100,37 @@ STATISTICS_DISCONNECTED=Getrennt / Keine Dateien
 #### STATISTICS_SHARING_TOOLTIP=You are sharing
 STATISTICS_SHARING_TOOLTIP=Gesamtzahl freigegebener Dateien
 #### STATISTICS_CONNECTION_DISCONNECTED=Disconnected
-STATISTICS_CONNECTION_DISCONNECTED=getrennt
+STATISTICS_CONNECTION_DISCONNECTED=Getrennt
 #### STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network. To connect, choose Connect from the File menu.
 STATISTICS_CONNECTION_DISCONNECTED_TIP=Sie sind nicht mit dem Netzwerk verbunden. Um sich zu verbinden, wählen Sie Verbinden aus dem Dateimenü.
 #### STATISTICS_CONNECTION_CONNECTING=Starting
-STATISTICS_CONNECTION_CONNECTING=Wird verbunden
+STATISTICS_CONNECTION_CONNECTING=Starte
 #### STATISTICS_CONNECTION_CONNECTING_TIP=You are currently connecting to the network
 STATISTICS_CONNECTION_CONNECTING_TIP=Sie verbinden sich gerade mit dem Netzwerk.
 #### STATISTICS_CONNECTION_POOR=Poor
-STATISTICS_CONNECTION_POOR=schlecht
+STATISTICS_CONNECTION_POOR=Schlechte
 #### STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network
 STATISTICS_CONNECTION_POOR_TIP=Sie sind mit wenigen Rechnern verbunden und haben eine instabile Verbindung mit dem Netzwerk.
 #### STATISTICS_CONNECTION_FAIR=Fair
-STATISTICS_CONNECTION_FAIR=mittelmäßig
+STATISTICS_CONNECTION_FAIR=Mittelmäßige
 #### STATISTICS_CONNECTION_FAIR_TIP=Your connection to the network is getting stronger
 STATISTICS_CONNECTION_FAIR_TIP=Ihre Verbindung mit dem Netzwerk wird besser.
 #### STATISTICS_CONNECTION_GOOD=Good
-STATISTICS_CONNECTION_GOOD=gut
+STATISTICS_CONNECTION_GOOD=Gute
 #### STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection
 STATISTICS_CONNECTION_GOOD_TIP=Sie sind noch nicht komplett mit dem Netzwerk verbunden, haben aber eine sehr gute Verbindung.
 #### STATISTICS_CONNECTION_EXCELLENT=Excellent
-STATISTICS_CONNECTION_EXCELLENT=ausgezeichnet
+STATISTICS_CONNECTION_EXCELLENT=Ausgezeichnete
 #### STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong
 STATISTICS_CONNECTION_EXCELLENT_TIP=Sie haben eine sehr gute Verbindung mit dem Netzwerk.
 #### STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-Charged
-STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-beschleunigt
+STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-beschleunigte
 #### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience Turbo-Charged connections all the time with LimeWire PRO!
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=Mit LimeWire PRO können Sie jederzeit über turbo-beschleunigte Verbindungen verfügen!
 #### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Ihre Verbindung mit dem Netzwerk ist äußerst gut.
 #### STATISTICS_CONNECTION_QUALITY=Connection
-STATISTICS_CONNECTION_QUALITY=Qualität:
+STATISTICS_CONNECTION_QUALITY=Verbindung
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
 STATISTICS_CONNECTION_WAKING_UP=Wacht auf
 #### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode
