add a GUI side to secure results, cleanup comparing in ResultPanelModel a bit.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -405,6 +405,7 @@ SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_BLOCK_STRING=Block Host
 SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
+SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
 SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_TWO=program and could contain a virus. Are
