forgot to check in non gui components yesterday.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -90,6 +90,7 @@ OPTIONS_BUTTONS_APPLY_TIP=Apply Your Changes
 OPTIONS_RESTART_REQUIRED=One or more options will take effect the next time LimeWire is restarted.
 OPTIONS_BUTTON_REVERT_TO_DEFAULT=Restore Defaults
 OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Revert All Settings to the Factory Defaults
+OPTIONS_LEARN_MORE_LABEL=Learn more about this option...
 
 ################################################################################
 # Key/value pairs for general terms, such as "yes" and "no"
@@ -322,6 +323,15 @@ MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_ACCESSIBLE=Display the Options Screen
+
+MENU_FILTERS_TITLE=Filters
+MENU_FILTERS_TITLE_MNEMONIC=S
+MENU_FILTERS_CONFIGURE=Configure Content Filters
+MENU_FILTERS_CONFIGURE_MNEMONIC=C
+MENU_FILTERS_CONFIGURE_ACCESSIBLE=Configure LimeWire's Content Filtering Options
+MENU_FILTERS_LEARN_MORE=Learn More...
+MENU_FILTERS_LEARN_MORE_ACCESSIBLE=Learn More about LimeWire's Content Filtering System
+MENU_FILTERS_LEARN_MORE_MNEMONIC=L
 
 MENU_HELP_TITLE=Help
 MENU_HELP_TITLE_MNEMONIC=H
@@ -905,6 +915,7 @@ PLAYLIST_FILE_PARSE_PROBLEM=. The file cannot be parsed.
 ################################################################################
 SETUP_LANGUAGE_TITLE=Language Options
 SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
+SETUP_MORE_INFO=Learn more about this option...
 SETUP_WELCOME_TITLE=Welcome
 SETUP_WELCOME_LABEL=Welcome to the LimeWire setup wizard. LimeWire will guide you through a series of steps to configure LimeWire for optimum performance.
 SETUP_WELCOME_PARTIAL_LABEL=Welcome to the LimeWire setup wizard. LimeWire has recently added new features that require your configuration. LimeWire will guide you through a series of steps to configure these new features.
@@ -926,6 +937,9 @@ SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
 SETUP_CONFIRM_TITLE=Confirm Scan
 SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
+SETUP_FILTER_TITLE=Content Filtering
+SETUP_FILTER_LABEL=LimeWire can filter files that copyright owners request not be shared.  By enabling filtering, you are telling LimeWire to confirm all files you download or share with a list of removed content.  You can change this at any time by choosing Filters -> Configure Content Filters from the main menu.
+SETUP_FILTER_CHECKBOX=Enable Content Filtering
 SETUP_FINISH_TITLE=Finish Setup
 SETUP_FINISH_LABEL=Your LimeWire setup has successfully completed. Please press the "Finish" button to begin using LimeWire.
 
@@ -1500,6 +1514,7 @@ OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_STARTUP_MAIN_TITLE=System Startup
 OPTIONS_PROXY_MAIN_TITLE=Proxy
 OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale Preferencing
+OPTIONS_CONTENT_FILTER_MAIN_TITLE=Content
 
 ################################################################################
 # Key/value pairs for the localization options window item
@@ -1969,6 +1984,17 @@ OPTIONS_PROXY_LOGIN_LABEL=Configure username and password to be used for the pro
 OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Enable Authentication (Does Not Work for HTTP Proxies):
 OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Username:
 OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
+
+
+
+
+################################################################################
+# Key/value pairs for the content filter options window item
+# in the options window
+################################################################################
+OPTIONS_CONTENT_FILTER_TITLE=Content Filters
+OPTIONS_CONTENT_FILTER_LABEL=You can tell LimeWire to filter files that copyright owners request not be shared.  By enabling filtering, you are instructing LimeWire to confirm all files you download or share with a list of removed content.
+OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=Enable Content Filters
 
 ################################################################################
 # Key/value pairs for the junk filter options window item
