Forgot a message resource

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1753,7 +1753,9 @@ OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility Mode:
 
 OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Password Protection
 OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
+OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_CHECKBOX_LABEL=Require Username:
 OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require Password:
+OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_LABEL=Username:
 OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Password:
 
 ################################################################################
