--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1746,10 +1746,9 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=You can have LimeWire import newly downloaded so
 # Key/Value pairs for the iTunes/DAAP options in the options window
 ################################################################################
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
-OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
+OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.
 OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share My Music:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared Name:
-OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility Mode:
 
 OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Password Protection
 OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
@@ -1757,6 +1756,10 @@ OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_CHECKBOX_LABEL=Require Username:
 OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require Password:
 OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_LABEL=Username:
 OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Password:
+
+OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=Buffer Size
+OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=You can configure the buffer size to use for streaming media.  If iTunes or other media players experience frequent rebuffering, increase this value.  A higher setting may use more memory.
+
 
 ################################################################################
 # Key/Value pairs for url handler options
