--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -218,6 +218,14 @@ MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
 MENU_FILE_DISCONNECT=Disconnect
 MENU_FILE_DISCONNECT_MNEMONIC=I
 MENU_FILE_DISCONNECT_ACCESSIBLE=Disconnect from the Network
+MENU_FILE_OPEN_TORRENT=Open .torrent
+MENU_FILE_OPEN_TORRENT_MNEMONIC=T
+MENU_FILE_OPEN_TORRENT_ACCESSIBLE=Opens a .torrent file from your hard drive
+MENU_FILE_DOWNLOAD_TORRENT=Download .torrent
+MENU_FILE_DOWNLOAD_TORRENT_MNEMONIC=D
+MENU_FILE_DOWNLOAD_TORRENT_ACCESSIBLE=Downloads a .torrent file from the WWW
+MENU_FILE_OPEN_TORRENT_URL_DIALOG_TITLE=Download .torrent file from the web
+MENU_FILE_OPEN_TORRENT_URL_DIALOG_LABEL=URL
 MENU_FILE_LIBRARY_NEW_FOLDER=New Folder
 MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=N
 MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Add a Folder to the Selected Library Folder
@@ -694,6 +702,8 @@ DOWNLOAD_SPEED_COLUMN=Speed
 DOWNLOAD_TIME_REMAINING_COLUMN=Time
 DOWNLOAD_SERVER_COLUMN=Vendor/Version
 DOWNLOAD_STATUS_QUEUED=Queued
+DOWNLOAD_STATUS_SEEDING=Seeding
+DOWNLOAD_STATUS_WAITING_FOR_TRACKER=Waiting For Tracker
 DOWNLOAD_STATUS_CONNECTING=Connecting...
 DOWNLOAD_STATUS_WAITING=Waiting On Busy Hosts
 DOWNLOAD_STATUS_COMPLETE=Complete
@@ -745,6 +755,9 @@ DOWNLOAD_SEARCH_FILENAME_LABEL=Files with this name
 DOWNLOAD_SEARCH_FILENAME_TIP=Searches for files with the same file name.
 DOWNLOAD_SERACH_ORGINAL_LABEL=Orginal query
 DOWNLOAD_SERACH_ORGINAL_TIP=Performs the same search as the one which found this file previously.
+
+TORRENTS_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old torrents.
+TORRENTS_TRACKER_FAILURE=LimeWire's tracker request failed:  
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -1429,6 +1442,9 @@ ERROR_INTERNETARCHIVE_CONNECTION=There was an error while connecting to the inte
 ERROR_INTERNETARCHIVE_LOGIN=There was an error while logging in to the Internet Archive. Please check your username and password and try again.
 ERROR_INTERNETARCHIVE_DIRECTORY=There was an error while trying to access the upload directory.
 ERROR_INTERNETARCHIVE_COMMUNICATION=There was an error communicating with the Internet Archive. Please try again later.
+ERROR_COULD_NOT_OPEN_TORRENT=LimeWire was unable to load the specified torrent file, - it may be malformed or LimeWire does not have permission to access this file.
+ERROR_COULD_NOT_OPEN_TORRENT_URL=LimeWire was unable to download the torrent file from the specified URL: 
+ERROR_BAD_TORRENT_URL=The specified URL is not valid. Please check your input. 
 ################################################################################
 # Messages for Licensing
 ################################################################################
