incorporated patch for 'cumulative repeat searches' from PNomolos.  Thanks!

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -412,6 +412,7 @@ SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Lookup File with Bitzi
 SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Show Magnet Details
 SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
+SEARCH_PUBLIC_REPEAT_SEARCH_NO_CLEAR_STRING=Get More Results
 SEARCH_PUBLIC_BLOCK_STRING=Block Host
 SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
