Refactoring code that controls platform-specific firewalls

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -928,7 +928,7 @@ SETUP_STARTUP_TITLE=System Startup
 SETUP_STARTUP_LABEL=Would you like LimeWire to start when you log into your computer? This will cause LimeWire to start faster when you use it later.
 SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_FIREWALL_TITLE=Firewall Setup
-SETUP_FIREWALL_LABEL=LimeWire performs best with full access to the Internet. If firewall or security warnings appear, unblock LimeWire to allow it access. If there is a check box to remember the setting, check it. The picture below shows firewall warnings. Your firewall software may look different. It is also possible that no warnings will appear. Click 'Next' to continue setting up LimeWire.
+SETUP_FIREWALL_LABEL=LimeWire performs best with full access to the Internet. If firewall or security warnings appear, please unblock LimeWire and choose to remember the setting. Your firewall software may look different than the below picture.
 SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
 SETUP_WAIT_TITLE=Scanning Hard Drive
