--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -674,7 +674,7 @@ SEARCH_STOP_BUTTON_LABEL=Arrêter
 #### SEARCH_STOP_BUTTON_TIP=Stop Collecting Search Results for Selected Tab
 SEARCH_STOP_BUTTON_TIP=Stoppe la collecte de résultats dans l'onglet sélectionné.
 #### SEARCH_SPAM_MARK_AS_LABEL=Mark As
-#? SEARCH_SPAM_MARK_AS_LABEL=
+SEARCH_SPAM_MARK_AS_LABEL=Identifie comme
 #### SEARCH_SPAM_BUTTON_LABEL=Junk
 #? SEARCH_SPAM_BUTTON_LABEL=
 #### SEARCH_NOT_SPAM_BUTTON_LABEL=Not Junk
