synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -122,6 +122,8 @@ OPTIONS_RESTART_REQUIRED=Een of meerdere opties zullen pas van kracht zijn als u
 OPTIONS_BUTTON_REVERT_TO_DEFAULT=Herstel standaardinstellingen.
 #### OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Revert All Settings to the Factory Defaults
 OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Herstelt alle instellingen terug naar fabrieksinstellingen
+#### OPTIONS_LEARN_MORE_LABEL=Learn more about this option...
+#? OPTIONS_LEARN_MORE_LABEL=
 
 ################################################################################
 # Key/value pairs for general terms, such as "yes" and "no"
@@ -536,6 +538,23 @@ MENU_TOOLS_OPTIONS_MNEMONIC=O
 #### MENU_TOOLS_OPTIONS_ACCESSIBLE=Display the Options Screen
 MENU_TOOLS_OPTIONS_ACCESSIBLE=Ga naar het 'Opties'-scherm
 
+#### MENU_FILTERS_TITLE=Filters
+#? MENU_FILTERS_TITLE=
+#### MENU_FILTERS_TITLE_MNEMONIC=S
+#? MENU_FILTERS_TITLE_MNEMONIC=
+#### MENU_FILTERS_CONFIGURE=Configure Content Filters
+#? MENU_FILTERS_CONFIGURE=
+#### MENU_FILTERS_CONFIGURE_MNEMONIC=C
+#? MENU_FILTERS_CONFIGURE_MNEMONIC=
+#### MENU_FILTERS_CONFIGURE_ACCESSIBLE=Configure LimeWire's Content Filtering Options
+#? MENU_FILTERS_CONFIGURE_ACCESSIBLE=
+#### MENU_FILTERS_LEARN_MORE=Learn More...
+#? MENU_FILTERS_LEARN_MORE=
+#### MENU_FILTERS_LEARN_MORE_ACCESSIBLE=Learn More about LimeWire's Content Filtering System
+#? MENU_FILTERS_LEARN_MORE_ACCESSIBLE=
+#### MENU_FILTERS_LEARN_MORE_MNEMONIC=L
+#? MENU_FILTERS_LEARN_MORE_MNEMONIC=
+
 #### MENU_HELP_TITLE=Help
 MENU_HELP_TITLE=Hulp
 #### MENU_HELP_TITLE_MNEMONIC=H
@@ -682,12 +701,16 @@ SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Toon Magnet-details
 SEARCH_PUBLIC_HTTP_PAGE_STRING=Web-pagina voor bestand(en)
 #### SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Herhaal zoekopdracht
+#### SEARCH_PUBLIC_REPEAT_SEARCH_NO_CLEAR_STRING=Get More Results
+#? SEARCH_PUBLIC_REPEAT_SEARCH_NO_CLEAR_STRING=
 #### SEARCH_PUBLIC_BLOCK_STRING=Block Host
 SEARCH_PUBLIC_BLOCK_STRING=Negeer host
 #### SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_RESULT_TABLE_LABEL=Resultaten
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Zoek verder
+#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
+#? SEARCH_RESULT_SECURE_TIP=
 #### SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_SEARCHING_LABEL=Zoeken...
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
@@ -1032,7 +1055,7 @@ SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Download is niet opgeslagen in map 
 SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Download naar map {0} is niet gelukt omdat het geen map is.  
 # {0} the full path name of the file
 #### SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location to {0}, because the filename is invalid and may corrupt your system.
-SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Het wijzigen van de bestandslocatie is mislukt, omdat de bestandsnaam ongeldig is en uw systeem kan beïnvloeden.
+#? SAVE_LOCATION_SECURITY_VIOLATION_ERROR=
 # {0} the full path name of the file
 #### SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location to {0}, because it is not a regular file.
 SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Bestandslocatie {0} kon niet worden gerealiseerd omdat het geen gangbaar bestand is. 
@@ -1219,6 +1242,10 @@ DOWNLOAD_STATUS_SAVING=Opslaan bestand...
 DOWNLOAD_STATUS_PAUSING=Onderbreken...
 #### DOWNLOAD_STATUS_PAUSED=Paused
 DOWNLOAD_STATUS_PAUSED=Onderbroken
+#### DOWNLOAD_STATUS_INVALID=Content Removed
+#? DOWNLOAD_STATUS_INVALID=
+#### DOWNLOAD_INVALID_EXPLAIN=The owner of this content has requested that this file be removed from the network.  To learn more, double-click on the download (or click preview).
+#? DOWNLOAD_INVALID_EXPLAIN=
 #### DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 DOWNLOAD_AWAITING_SOURCES=Een specifieke zoekopdracht is misschien nodig...
 # {0} the name of the skin
@@ -1329,6 +1356,8 @@ UPLOAD_TABLE_STRING_COMPLETE=Compleet
 UPLOAD_TABLE_STRING_BANNED_GREEDY=Te grote hoeveelheid 
 #### UPLOAD_TABLE_STRING_HASH_TREE=Uploading Hash Tree
 UPLOAD_TABLE_STRING_HASH_TREE=Uploaden Hash Tree
+#### UPLOAD_TABLE_STRING_VALIDATING=Validation Required
+#? UPLOAD_TABLE_STRING_VALIDATING=
 #### UPLOAD_TABLE_STRING_FNF=File Not Found
 UPLOAD_TABLE_STRING_FNF=Bestand niet gevonden
 #### UPLOAD_TABLE_STRING_QUEUED=Queued at
@@ -1567,6 +1596,8 @@ PLAYLIST_FILE_PARSE_PROBLEM=. Het probleem kan niet verholpen worden.
 SETUP_LANGUAGE_TITLE=Taalopties
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Gelieve een taalkeuze te maken voor LimeWire.
+#### SETUP_MORE_INFO=Learn more about this option...
+#? SETUP_MORE_INFO=
 #### SETUP_WELCOME_TITLE=Welcome
 SETUP_WELCOME_TITLE=Welkom
 #### SETUP_WELCOME_LABEL=Welcome to the LimeWire setup wizard. LimeWire will guide you through a series of steps to configure LimeWire for optimum performance.
@@ -1587,14 +1618,10 @@ SETUP_STARTUP_TITLE=Opstarten systeem
 SETUP_STARTUP_LABEL=Wilt u dat LimeWire direct opstart als u uw computer aanzet? Dit zal LimeWire helpen sneller te beginnen wanneer u het later gebruikt.
 #### SETUP_STARTUP_CHECKBOX=Start Automatically
 SETUP_STARTUP_CHECKBOX=Automatisch opstarten
-#### SETUP_FIREWALL_TITLE_ONE=Firewall Preparation
-SETUP_FIREWALL_TITLE_ONE=Firewall voorbereiding
-#### SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network in order to function properly. When you click next, some firewalls will ask your permission for LimeWire to use the network. You should allow LimeWire full access. Below is a picture of Windows Firewall asking to unblock LimeWire. Your firewall software may look different.
-SETUP_FIREWALL_LABEL_ONE=LimeWire heeeft informatie nodig van het netwerk om behoorlijk te kunnen functioneren. Wanneer u doorklikt, zullen sommige firewalls uw toestemming voor LimeWire vragen om het netwerk te gebruiken. U moet LimeWire volledige toegang verlenen. Hieronder is een beeld van Windows firewall om LimeWire te deblokkeren. Uw firewall-software kan er anders uitzien. 
-#### SETUP_FIREWALL_TITLE_TWO=Firewall Warning
-SETUP_FIREWALL_TITLE_TWO=Firewall waarschuwing
-#### SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network. If nothing appears, LimeWire has succesfully started listening to the network. If your software does pop up a warning, please allow LimeWire full access for best performance. Click 'Next' when finished.
-SETUP_FIREWALL_LABEL_TWO=LimeWire vraagt nu toestemming om het netwerk te gebruiken. Als er niets verschijnt gaat het goed. Als er in uw software een waarschuwing opduikt, zorg dan dat u LimeWire volledige toegang verleent. Klik vervolgens op 'Verder'.
+#### SETUP_FIREWALL_TITLE=Firewall Setup
+#? SETUP_FIREWALL_TITLE=
+#### SETUP_FIREWALL_LABEL=LimeWire performs best with full access to the Internet. If firewall or security warnings appear, please unblock LimeWire and choose to remember the setting. Your firewall software may look different than the below picture.
+#? SETUP_FIREWALL_LABEL=
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=Bestanden zoeken
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
@@ -1609,6 +1636,12 @@ SETUP_CONFIRM_TITLE=Bevestig zoektocht
 SETUP_CONFIRM_LABEL=De onderstaande mappen komen in aanmerking om te worden gedeeld. Vink de vakjes aan welke u wilt delen. Onderliggende mappen worden dan automatisch ook gedeeld.
 #### SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire kon de plaats niet bepalen van de bestanden om te kunnen worden gedeeld. Om door te gaan met configureren van LimeWire klik op "Verder".
+#### SETUP_FILTER_TITLE=Content Filtering
+#? SETUP_FILTER_TITLE=
+#### SETUP_FILTER_LABEL=LimeWire can filter files that copyright owners request not be shared.  By enabling filtering, you are telling LimeWire to confirm all files you download or share with a list of removed content.  You can change this at any time by choosing Filters -> Configure Content Filters from the main menu.
+#? SETUP_FILTER_LABEL=
+#### SETUP_FILTER_CHECKBOX=Enable Content Filtering
+#? SETUP_FILTER_CHECKBOX=
 #### SETUP_FINISH_TITLE=Finish Setup
 SETUP_FINISH_TITLE=Installatie afronden
 #### SETUP_FINISH_LABEL=Your LimeWire setup has successfully completed. Please press the "Finish" button to begin using LimeWire.
@@ -1746,8 +1779,6 @@ XML_videos__video__height__=Hoogte
 XML_videos__video__width__=Wijdte
 #### XML_videos__video__bitrate__=Bitrate
 XML_videos__video__bitrate__=Bit-snelheid
-#### XML_videos__video__action__=Action
-XML_videos__video__action__=Actie
 
 #### XML_images__image=Image
 XML_images__image=Afbeelding
@@ -2319,7 +2350,7 @@ ERROR_INTERNAL_ALWAYS_SEND=Altijd direct verzenden
 ERROR_INTERNAL_ALWAYS_REVIEW=Altijd vragen om overzicht
 #### ERROR_INTERNAL_ALWAYS_DISCARD=Always Discard All Errors
 ERROR_INTERNAL_ALWAYS_DISCARD=Altijd alle fouten verwerpen
-#### ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server in order to send the below bug report. To aid in debugging, please copy the following text and email it to bugs@limewire.com. Thank you.
+#### ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server in order to send the below bug report. For further help and to aid with debugging, please visit www.limewire.com and click 'Support'. Thank you.
 ERROR_INTERNAL_SERVLET_FAILED=LimeWire kon geen verbinding krijgen met de virusserver om het onderstaande virusrapport te verzenden. Om hierbij te helpen, kopiëer de volgende tekst en stuur dit aan bugs@limewire.com.
 
 ################################################################################
@@ -2620,6 +2651,8 @@ OPTIONS_STARTUP_MAIN_TITLE=Opstarten systeem
 OPTIONS_PROXY_MAIN_TITLE=Proxy
 #### OPTIONS_CONNECT_PREF_MAIN_TITLE=Locale Preferencing
 OPTIONS_CONNECT_PREF_MAIN_TITLE=Lokale voorkeuren
+#### OPTIONS_CONTENT_FILTER_MAIN_TITLE=Content
+#? OPTIONS_CONTENT_FILTER_MAIN_TITLE=
 
 ################################################################################
 # Key/value pairs for the localization options window item
@@ -2969,23 +3002,31 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=U kunt LimeWire de onlangs gedownloade muziek in
 ################################################################################
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Delen
-#### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
+#### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.
 OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=U kunt uw muziek op het LAN zetten en het toegankelijk maken voor andere Players die Digitale Audioprotocollen (DAAP) hebben.\n\nCompatibiliteit toelaten als u problemen met iTunes Sharing heeft. Deze modus gebruikt meer middelen en is langzamer, maar kan problemen verhelpen.
 #### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share My Music:
 OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Deel mijn muziek:
 #### OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared Name:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Deelnaam:
-#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility Mode:
-OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibiliteit-modus:
 
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Password Protection
 OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Vereist wachtwoord
 #### OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
 OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=U kunt toegang tot deze dienst beperken met een wachtwoord.
+#### OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_CHECKBOX_LABEL=Require Username:
+#? OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_CHECKBOX_LABEL=
 #### OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Require Password:
 OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Vereist wachtwoord
+#### OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_LABEL=Username:
+#? OPTIONS_ITUNES_DAAP_PASSWORD_USERNAME_LABEL=
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Password:
 OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Wachtwoord:
+
+#### OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=Buffer Size
+#? OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=
+#### OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=You can configure the buffer size to use for streaming media.  If iTunes or other media players experience frequent rebuffering, increase this value.  A higher setting may use more memory.
+#? OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=
+
 
 ################################################################################
 # Key/Value pairs for url handler options
@@ -3342,6 +3383,20 @@ OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Authentificatie. (Werkt niet voor http-pr
 OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Gebruikersnaam:
 #### OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
 OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Wachtwoord:
+
+
+
+
+################################################################################
+# Key/value pairs for the content filter options window item
+# in the options window
+################################################################################
+#### OPTIONS_CONTENT_FILTER_TITLE=Content Filters
+#? OPTIONS_CONTENT_FILTER_TITLE=
+#### OPTIONS_CONTENT_FILTER_LABEL=You can tell LimeWire to filter files that copyright owners request not be shared.  By enabling filtering, you are instructing LimeWire to confirm all files you download or share with a list of removed content.
+#? OPTIONS_CONTENT_FILTER_LABEL=
+#### OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=Enable Content Filters
+#? OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=
 
 ################################################################################
 # Key/value pairs for the junk filter options window item
